[package]
name = "competitive-hpp"
version = "0.1.0"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
edition = "2018"

description = "Competitive Programming Library for AtCoder with Rust"
repository = "https://github.com/hppRC/competitive-hpp-rs"
license = "MIT"
readme = "README.md"

categories = ["Algorithms"] #https://crates.io/categories/
keywords = []

# homepage = "<url-to-homepage>"
# documentation = "<url-to-documentation>"

[dependencies]