[package]
name = "competitive-hpp"
version = "0.8.2"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
edition = "2018"
description = "Competitive Programming Library for AtCoder with Rust"
repository = "https://github.com/hppRC/competitive-hpp-rs"
license = "MIT"
readme = "README.md"
categories = ["algorithms"] # https://crates.io/category_slugs
keywords = []

# homepage = "<url-to-homepage>"
# documentation = "<url-to-documentation>"
[dependencies]
itertools = "0.9.0"
memoise = "0.3.2"
num = "0.2.1"
proconio = { version = "0.4.1", features = ["derive"] }
# 挿入順を保つ HashMap を提供
indexmap = "1.3.2"
superslice = "1.0.0"
typenum = "1.12.0"
